1. Refactored HW-1 for create separate directories in /fixtures  1.1 Replaced text examples for pathView.js to /fixtures/treeView  1.2 Changed command for start function to "treeView" in package.json
2. Added function textReader.js for create new file with count of appeared words from file to /output/outputText.txt

3. Updated data in README.md

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node ./services/pathView.js"
+    "treeView": "node ./services/pathView.js",
+    "textReader": "node ./services/textReader.js"
   },
   "author": "artyomzinnatullin",
   "license": "MIT",
