1. Refactored pathView.js and has been created separate file for function printTree (printTree.js) 2. Added jest library and script "test" in package.json for start jest tests 3. Added tests for printTree function

--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "main": "index.js",
   "scripts": {
     "treeView": "node ./services/pathView.js",
-    "textReader": "node ./services/textReader.js"
+    "textReader": "node ./services/textReader.js",
+    "test": "jest --coverage --coverageProvider=v8"
   },
   "author": "artyomzinnatullin",
   "license": "MIT",
   "dependencies": {
     "commander": "^12.1.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
